# ArbiRich

./: .djlintrc  .dockerignore  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  example.py  justfile  main.py  mise.toml  pyproject.toml
.github/workflows/: build.yaml  ci.yaml  deploy.yaml  main.yaml  project-sync.yaml
alembic/: env.py
alembic/versions/: 058e048249ef_initial_migration.py  272a10e9a349_auto.py  3faf8870dc90_auto.py  590a93bc17d8_auto.py  8193bb2d2789_initial_migration.py  df06ccaed540_initial_migration.py  f370032e4725_initial_migration.py  f454e0982d06_initial_migration.py
deployment/k8s/: deployment.yaml
docs/: database_prefill.md  database_structure.md
scripts/: __init__.py  create-local-db.sh  create_seed_data.py  debug_db.py  docker-compose-helper.sh  docker-entrypoint.sh  docker-reset-volumes.sh  drop_database.py  inject_test_messages.py  monitor_redis.py  recalculate_metrics.py  redis-manager.sh  reset_local_db.sh  stop_app.py  strategy_inspector.py  wait-for-postgres.sh
src/: __init__.py
src/arbirich/: __init__.py  app_factory.py  arbitrage.py  config.py  config_old.py  constants.py  database_manager.py  db_manager.py  execution.py  main.py  market_data_service.py  redis_manager.py
src/arbirich/api/: __init__.py  dashboard_api.py  router.py  status.py  uni_router.py
src/arbirich/config/: __init__.py  config.py  constants.py  logging_config.py  model_registry.py  settings.py  validator.py
src/arbirich/core/: __init__.py  app.py  app_lifecyle.py  events.py  flow_manager.py  logging_config.py  shutdown_manager.py  system_state.py  trading_service.py
src/arbirich/exchange/: base_exchange.py  mock_exchange.py
src/arbirich/exchange_clients/: binance_client.py  bybit_client.py  exchange_client_base.py  kucoin_client.py
src/arbirich/exchange_processors/: __init__.py  base_processor.py  bybit.py  cryptocom.py  default_processor.py  processor_factory.py  registry.py
src/arbirich/execution_strategies/: base_execution_strategy.py  execution_strategy_configs.py  limit_order.py  market_order.py
src/arbirich/factories/: __init__.py  exchange_factory.py  execution_strategy_factory.py  factory_base.py  processor_factory.py  strategy_factory.py
src/arbirich/flows/: __init__.py  arbitrage.py  database.py  execution.py  execution_flow.py  ingestion.py  ingestion_flow.py  ingestion_minimal.py  ingestion_old.py  ingestion_simple.py  ingestion_ws_base_class.py
src/arbirich/models/: __init__.py  base.py  config.py  config_models.py  configs.py  dtos.py  enums.py  exchange.py  exchange_models.py  execution.py  health_check.py  metrics.py  models.py  order_book.py  orm_models.py  risk.py  router.py  router_models.py  schema.py  states.py  strategy.py  trade.py  trading.py  trading_pair.py
src/arbirich/processing/: arbitrage_process.py  helpers.py  ingestion_process.py  process_arbitrage.py  process_ingestion.py
src/arbirich/routers/: health.py  status.py  websocket.py
src/arbirich/routes/: status.py  trade.py
src/arbirich/services/: arbitrage.py  arbitrage_service.py  background_subscriber.py  channel_maintenance.py  (+10 more)
strategies_/: strategy_configs.py  strategy_factory.py
tests/flows/: test_flow.py
tests/units/: test_market_data_service.py
(+278 files in other folders)
