[tool.poetry]
name = "arbirich"
version = "0.1.0"
description = "A project to detect and trade arbitrage opportunities."
authors = ["JonathanGriffiths94"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
websockets = "^14.2"
requests = "^2.32.3"
pybit = "5.5.0"
python-binance = "^1.0.27"
kucoin-python = "^1.0.26"
setuptools = "^75.8.0"
aiokafka = "^0.12.0"
kafka = "^1.3.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
black = "^25.1.0"
pytest = "^8.3.4"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
arbirich = "main:app"

[tool.ruff]
line-length = 90