[tool.poetry]
name = "arbirich"
version = "0.1.0"
description = "A project to detect and trade arbitrage opportunities."
authors = ["JonathanGriffiths94"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
websockets = "^14.2"
requests = "^2.32.3"
setuptools = "^75.8.0"
six = "^1.17.0"
bytewax = "^0.21.1"
bytewax-redis = "^0.1"
redis = "^5.2.1"
asyncpg = "^0.30.0"
python-dateutil = "^2.9.0.post0"
pydantic = "^2.10.6"
sqlalchemy = "^2.0.39"
alembic = "^1.15.1"
psycopg2-binary = "^2.9.10"
jinja2 = "^3.1.6"
psutil = "^7.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
black = "^25.1.0"
pytest = "^8.3.4"
pre-commit = "^4.1.0"
debugpy = "^1.8.12"
djlint = "^1.36.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
arbirich = "main:app"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.djlint]
ignore = "T003,J018,H021,J004,H025"
profile = "jinja"